--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.2.0",
+    "axios": "^0.27.2",
     "daisyui": "^2.25.0",
+    "octokit": "^2.0.7",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
