--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^9.2.0",
     "axios": "^0.27.2",
     "daisyui": "^2.25.0",
+    "dayjs": "^1.11.5",
     "octokit": "^2.0.7",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
